feat: list groups
